fixed hero txt bug on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,7 +144,6 @@ img.logo {
 .hero-text {
   color: white;
   z-index: 1;
-  width: 60%;
   text-shadow: 2px 2px 4px var(--light-grey-border);
 }
 
